Bug 31741 - Links to other files created if broken links inside (FILEOPEN)
Summary: Links to other files created if broken links inside (FILEOPEN)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3
Keywords:
Depends on:
Blocks: 31865
  Show dependency treegraph
 
Reported: 2010-11-18 14:13 UTC by Laurent Balland
Modified: 2011-01-13 03:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2010-11-18 14:13:51 UTC
Hello,

If you have broken links in your sheet, when LibO open your file, it ask you links to other files should be updated.
Steps to reproduce:
- create a new Calc file
- add data in Sheet1
- in Sheet2, insert link such as: =Sheet1.A1
- in Sheet1, remove lines with the data
=> in Sheet2, there is a reference error with #NAME ? (normal behavior)
- save your file
- reload it
=> LibO ask "This file contains links to other files. Should they be updated?"
In command Edit > Links, you get all links created (one per reference error).

You may simply ignore this message, but it is quite disturbing. File content is not affected, as OOo can open and does not find any link.
Comment 1 Kohei Yoshida 2010-11-24 08:21:15 UTC
Yup, this isn't good.

I'll take a look at this.
Comment 2 Kohei Yoshida 2010-11-29 10:08:46 UTC
Fixed on the libreoffice-3-3 branch.

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-3&id=2ad4ec8e3a5960e1bbbcb0d917ac16acdf0f1729

Calc was previously parsing the invalid ref string as a valid external range name, which invoked the external link update dialog.  OOo does not yet support external range names, which is the reason why it wasn't affected.
Comment 3 sophie 2011-01-13 03:12:55 UTC
Verified - Closed - Sophie