More strict parsing of external range names.

This is to prevent parsing formula strings such as '=A#REF!' as valid
external range names.  Ideally we should express any formula including
invalid refs simply as '=#REF!' in all cases, but we are not there
yet. (fdo#31741)